--- a/config/database.yml
+++ b/config/database.yml
@@ -42,16 +42,23 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+development:
+  adapter: postgresql
+  encoding: unicode
+  database: better_note_dev
+  pool: 5
+  username: postgres
+
 test:
   adapter: postgresql
   encoding: unicode
-  database: BetterNote_test
+  database: better_note_test
   pool: 5
-  username: appacademy
+  username: postgres
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: BetterNote_production
+  database: better_note_prod
   pool: 5
-  username: appacademy
+  username: postgres
