--- a/config/database.yml
+++ b/config/database.yml
@@ -1,64 +1,40 @@
-# PostgreSQL. Versions 8.2 and up are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On OS X with Homebrew:
-#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
-# On OS X with MacPorts:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
-#
-# Configure Using Gemfile
-# gem 'pg'
-#
 development:
-  adapter: postgresql
-  encoding: unicode
-  database: BetterNote_development
-  pool: 5
-  username: appacademy
+  adapter: mysql2
+  database: better_note_dev
+  # set this if you are storing utf8 in your mysql database to handle strings
+  # like "Réné". Not needed for sqlite. For PostgreSQL use encoding: unicode
+  # encoding: utf8
+  host: localhost
+  username: root
+  password: '123456'
 
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
+production:
+  adapter: mysql2
+  database: better_note_prod
+  # set this if you are storing utf8 in your mysql database to handle strings
+  # like "Réné".Not needed for sqlite. For PostgreSQL use encoding: unicode
+  # encoding: utf8
+  host: localhost
+  username: root
+  password:
 
-  # The TCP port the server listens on. Defaults to 5432.
-  # If your server runs on a different port number, change accordingly.
-  #port: 5432
+# The following is an example to configure Tracks to use sqlite
 
-  # Schema search path. The server defaults to $user,public
-  #schema_search_path: myapp,sharedapp,public
+#production:
+#  adapter: sqlite3
+#  database: db/tracks-20-blank.sqlite3.db
+#  pool: 5
+#  timeout: 5000
 
-  # Minimum log levels, in increasing order:
-  #   debug5, debug4, debug3, debug2, debug1,
-  #   log, notice, warning, error, fatal, and panic
-  # Defaults to warning.
-  #min_messages: notice
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-development:
-  adapter: postgresql
-  encoding: unicode
-  database: better_note_dev
-  pool: 5
-  username: postgres
-
-test:
-  adapter: postgresql
-  encoding: unicode
+test: &TEST
+  adapter: mysql2
   database: better_note_test
-  pool: 5
-  username: postgres
+  username: root
+  encoding: utf8
 
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: better_note_prod
-  pool: 5
-  username: postgres
+cucumber:
+  <<: *TEST
